# langchain_yaml

./: README.md  pyproject.toml
examples/: prompt-template-1.yaml  prompt-template-2.yaml  vllm-llama2-7b.yaml  vllm-mistral-7b.yaml  vllm-openai-mistral-7b.yaml
langchain_wrapper/llm/: llm.py
langchain_wrapper/llm/vllm/: vllm.py
langchain_wrapper/llm/vllmopenai/: vllmopenai.py
langchain_wrapper/utils/: utils.py
langchain_yaml/llm/: __init__.py  llm.py
langchain_yaml/llm/vllm/: vllm.py
langchain_yaml/llm/vllmopenai/: vllmopenai.py
langchain_yaml/prompt/: __init__.py  prompt.py
tests/: test_prompt.py  test_vllm.py  test_vllmopenai.py
